--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
 .DS_Store
 
+xcode/Turntablism/Pods/
+
 xcode/Turntablism/Turntablism.xcworkspace/xcuserdata/thibaultmaekelbergh.xcuserdatad/UserInterfaceState.xcuserstate
