--- a/xcode/Turntablism/Turntablism/Info.plist
+++ b/xcode/Turntablism/Turntablism/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>MGLMapboxAccessToken</key>
+	<string>pk.eyJ1IjoidGhpYm1hZWtlbGJlcmdoIiwiYSI6ImNpZzZuYnhyMDVpb2N0em00dHltYnBsdW4ifQ.bIG02Djwp0OVeHERZPyPzA</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
